# Textual-sidebar

./: LICENSE  pyproject.toml
ttextual/: main.py
