[tool.poetry]
name = "ttextual"
version = "0.1.0"
description = ""
authors = ["ADJ <arnold-@live.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.77.0"


[tool.poetry.group.dev.dependencies]
textual = "^0.77.0"
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
